products/zillion/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zillion
  namespace: zillion
  labels:
    "app.kubernetes.io/name": "zillion"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": "zillion"
